# arithmetic_translator

./: Смышляев_ФИ1_Отчет_Транслятор_Арифметических_Выражений.docx
.github/workflows/: cmake.yml
gtest/: CMakeLists.txt
include/calc/: CMakeLists.txt  calc.cpp  calc.h
include/connect/: connect.cpp  connect.h
include/converter/: converter.cpp  converter.h
include/parser/: parser.cpp  parser.h
test/: CMakeLists.txt  test_calculation.cpp  test_connect.cpp  test_convert.cpp  test_parser.cpp
